# cpp-face-morph-server

./: CMakeLists.txt  LICENSE.md  README.md
client/php/: fld-client.php  fldm-client.php
code/: CMakeLists.txt
exe/FaceLandmarkServer/: CMakeLists.txt
lib/local/FLDServer/: CMakeLists.txt
lib/local/FLDServer/include/: io_service_pool.h  tcp_server.h
lib/local/FLDServer/src/: tcp_server.cpp
lib/local/LandmarkDetector/include/: LandmarkDetectorFunc.h
lib/local/LandmarkDetector/src/: LandmarkDetectorUtils.cpp
lib/local/Morpher/: CMakeLists.txt
lib/local/fld-server/include/: tcp_connection.h
lib/local/fld-server/src/: io_service_pool.cpp  tcp_connection.cpp
lib/local/morpher/: CMakeLists.txt
server/: CMakeLists.txt
server/exe/face-morph-server/: CMakeLists.txt  face-morph-server.cpp
server/lib/local/LandmarkDetector/src/: LandmarkDetectorParameters.cpp
server/lib/local/fld-core/: CMakeLists.txt
server/lib/local/fld-core/src/: LandmarkDetectorFunc.cpp
server/lib/local/fld-server/: CMakeLists.txt
server/lib/local/fld-server/include/: tcp_connection.h
server/lib/local/fld-server/src/: tcp_connection.cpp
server/lib/local/morpher/: CMakeLists.txt
server/lib/local/morpher/include/: morph.h
server/lib/local/morpher/src/: morph.cpp
